bundles/DataModeling/src/edu.teco.squery/src-gen/edu/teco/squery/parser/sQueryParser.java
// $ANTLR 3.0 ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g 2008-12-18 21:54:25

package edu.teco.squery.parser;

import org.eclipse.emf.ecore.EObject;

import org.openarchitectureware.xtext.parser.impl.AntlrUtil;
import org.openarchitectureware.xtext.XtextFile;
import org.openarchitectureware.xtext.parser.impl.EcoreModelFactory;
import org.openarchitectureware.xtext.parser.ErrorMsg;
import org.openarchitectureware.xtext.parser.model.ParseTreeManager;
import org.openarchitectureware.xtext.parser.parsetree.Node;

import edu.teco.squery.MetaModelRegistration;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class sQueryParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_STRING", "RULE_ID", "RULE_INT", "RULE_WS", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "'model'", "';'", "'action'", "'on'", "'where'", "'||'", "'&&'", "'/'", "'=='", "'<='", "'>='", "'<'", "'>'"
    };
    public static final int RULE_ID=5;
    public static final int RULE_STRING=4;
    public static final int RULE_INT=6;
    public static final int RULE_WS=7;
    public static final int RULE_SL_COMMENT=9;
    public static final int EOF=-1;
    public static final int RULE_ML_COMMENT=8;

        public sQueryParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[19+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g"; }



    	private Token getLastToken() {
    		return input.LT(-1);
    	}
    	private Token getNextToken() {
    		return input.LT(1);
    	}

    	private int line() {
    		Token t = getNextToken();
    		if (t==null)
    			return 1;
    		return t.getLine();
    	}

    	private int start() {
    		Token t = getNextToken();
    		if (t==null)
    			return 0;
    		if (t instanceof CommonToken) {
    			return ((CommonToken)t).getStartIndex();
    		}
    		return t.getTokenIndex();
    	}

    	private int end() {
    		Token t = getLastToken();
    		if (t==null)
    			return 1;
    		if (t instanceof CommonToken) {
    			return ((CommonToken)t).getStopIndex()+1;
    		}
    		return t.getTokenIndex();
    	}

    	protected Object convert(Object arg) {
    		if (arg instanceof org.antlr.runtime.Token) {
    			Token t = (Token) arg;
    			String s = t.getText();
    			if (t.getType() == sQueryLexer.RULE_ID && s.startsWith("^")) {
    				return s.substring(1);
    			} else if (t.getType()==sQueryLexer.RULE_STRING) {
    				return s.substring(1,s.length()-1);
    			} else if (t.getType()==sQueryLexer.RULE_INT) {
    				return Integer.valueOf(s);
    			}
    			return s;
    		}
    		return arg;
    	}


    	private EcoreModelFactory factory = new EcoreModelFactory(MetaModelRegistration.getEPackage());
        private ParseTreeManager ptm = new ParseTreeManager();
    	private XtextFile xtextfile = MetaModelRegistration.getXtextFile();
    	
    	{
    			factory.addImport("automataMM", "http://www.teco.edu/automata");
    		
    	}

    	public ParseTreeManager getResult() {
    		return ptm;
    	}

    	private List<ErrorMsg> errors = new ArrayList<ErrorMsg>();
    	public List<ErrorMsg> getErrors() {
    		return errors;
    	}

    	@Override
    		public void reportError(RecognitionException e) {
    		String msg = super.getErrorMessage(e,tokenNames);
    		errors.add(AntlrUtil.create(msg,e,tokenNames));
    			ptm.addError(msg, e);
    			ptm.ruleFinished(null, end());
    		}




    // $ANTLR start parse
    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:122:1: parse returns [Node r] : result= ruleQueryModel EOF ;
    public Node parse() throws RecognitionException {
        Node r = null;
        int parse_StartIndex = input.index();
        EObject result = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return r; }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:123:3: (result= ruleQueryModel EOF )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:123:3: result= ruleQueryModel EOF
            {
            pushFollow(FOLLOW_ruleQueryModel_in_parse67);
            result=ruleQueryModel();
            _fsp--;
            if (failed) return r;
            match(input,EOF,FOLLOW_EOF_in_parse69); if (failed) return r;
            if ( backtracking==0 ) {
              ptm.ruleFinished(result,end());r = ptm.getCurrent();
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 1, parse_StartIndex); }
        }
        return r;
    }
    // $ANTLR end parse


    // $ANTLR start ruleQueryModel
    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:126:1: ruleQueryModel returns [EObject result] : ( (temp_automata= ruleAutomata ) (temp_actions= ruleAction )+ ) ;
    public EObject ruleQueryModel() throws RecognitionException {
        EObject result = null;
        int ruleQueryModel_StartIndex = input.index();
        EObject temp_automata = null;

        EObject temp_actions = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:127:4: ( ( (temp_automata= ruleAutomata ) (temp_actions= ruleAction )+ ) )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:127:4: ( (temp_automata= ruleAutomata ) (temp_actions= ruleAction )+ )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "QueryModel");
              				ptm.setModelElement(result);
              			 
            }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:131:1: ( (temp_automata= ruleAutomata ) (temp_actions= ruleAction )+ )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:131:2: (temp_automata= ruleAutomata ) (temp_actions= ruleAction )+
            {
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:131:2: (temp_automata= ruleAutomata )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:131:3: temp_automata= ruleAutomata
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(0)),line(),start());
            }
            pushFollow(FOLLOW_ruleAutomata_in_ruleQueryModel93);
            temp_automata=ruleAutomata();
            _fsp--;
            if (failed) return result;
            if ( backtracking==0 ) {
              factory.set(result,"automata",convert(temp_automata),false); ptm.ruleFinished(temp_automata,end()); 
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:134:1: (temp_actions= ruleAction )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==12) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:134:2: temp_actions= ruleAction
            	    {
            	    if ( backtracking==0 ) {
            	      ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(1)),line(),start());
            	    }
            	    pushFollow(FOLLOW_ruleAction_in_ruleQueryModel104);
            	    temp_actions=ruleAction();
            	    _fsp--;
            	    if (failed) return result;
            	    if ( backtracking==0 ) {
            	      factory.add(result,"actions",convert(temp_actions),false); ptm.ruleFinished(temp_actions,end()); 
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return result;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 2, ruleQueryModel_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleQueryModel


    // $ANTLR start ruleAutomata
    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:139:1: ruleAutomata returns [EObject result] : ( ( 'model' ) (temp_model= RULE_STRING ) ( ';' ) ) ;
    public EObject ruleAutomata() throws RecognitionException {
        EObject result = null;
        int ruleAutomata_StartIndex = input.index();
        Token temp_model=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:140:4: ( ( ( 'model' ) (temp_model= RULE_STRING ) ( ';' ) ) )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:140:4: ( ( 'model' ) (temp_model= RULE_STRING ) ( ';' ) )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "Automata");
              				ptm.setModelElement(result);
              			 
            }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:144:1: ( ( 'model' ) (temp_model= RULE_STRING ) ( ';' ) )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:144:2: ( 'model' ) (temp_model= RULE_STRING ) ( ';' )
            {
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:144:2: ( 'model' )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:144:3: 'model'
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(0)),line(),start());
            }
            match(input,10,FOLLOW_10_in_ruleAutomata132); if (failed) return result;
            if ( backtracking==0 ) {
              ptm.ruleFinished(getLastToken(),end());
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:146:1: (temp_model= RULE_STRING )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:146:2: temp_model= RULE_STRING
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(1)),line(),start());
            }
            temp_model=(Token)input.LT(1);
            match(input,RULE_STRING,FOLLOW_RULE_STRING_in_ruleAutomata142); if (failed) return result;
            if ( backtracking==0 ) {
              factory.set(result,"model",convert(temp_model),false); ptm.ruleFinished(temp_model,end()); 
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:150:1: ( ';' )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:150:2: ';'
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(2)),line(),start());
            }
            match(input,11,FOLLOW_11_in_ruleAutomata152); if (failed) return result;
            if ( backtracking==0 ) {
              ptm.ruleFinished(getLastToken(),end());
            }

            }


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 3, ruleAutomata_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleAutomata


    // $ANTLR start ruleAction
    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:154:1: ruleAction returns [EObject result] : ( ( 'action' ) (temp_name= RULE_ID ) ( 'on' ) (temp_query= ruleQuery ) ( ';' ) ) ;
    public EObject ruleAction() throws RecognitionException {
        EObject result = null;
        int ruleAction_StartIndex = input.index();
        Token temp_name=null;
        EObject temp_query = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:155:4: ( ( ( 'action' ) (temp_name= RULE_ID ) ( 'on' ) (temp_query= ruleQuery ) ( ';' ) ) )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:155:4: ( ( 'action' ) (temp_name= RULE_ID ) ( 'on' ) (temp_query= ruleQuery ) ( ';' ) )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "Action");
              				ptm.setModelElement(result);
              			 
            }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:159:1: ( ( 'action' ) (temp_name= RULE_ID ) ( 'on' ) (temp_query= ruleQuery ) ( ';' ) )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:159:2: ( 'action' ) (temp_name= RULE_ID ) ( 'on' ) (temp_query= ruleQuery ) ( ';' )
            {
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:159:2: ( 'action' )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:159:3: 'action'
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(3)).eContents().get(1)).eContents().get(0)),line(),start());
            }
            match(input,12,FOLLOW_12_in_ruleAction177); if (failed) return result;
            if ( backtracking==0 ) {
              ptm.ruleFinished(getLastToken(),end());
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:161:1: (temp_name= RULE_ID )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:161:2: temp_name= RULE_ID
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(3)).eContents().get(1)).eContents().get(1)),line(),start());
            }
            temp_name=(Token)input.LT(1);
            match(input,RULE_ID,FOLLOW_RULE_ID_in_ruleAction186); if (failed) return result;
            if ( backtracking==0 ) {
              factory.set(result,"name",convert(temp_name),false); ptm.ruleFinished(temp_name,end()); 
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:164:1: ( 'on' )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:164:2: 'on'
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(3)).eContents().get(1)).eContents().get(2)),line(),start());
            }
            match(input,13,FOLLOW_13_in_ruleAction195); if (failed) return result;
            if ( backtracking==0 ) {
              ptm.ruleFinished(getLastToken(),end());
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:166:1: (temp_query= ruleQuery )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:166:2: temp_query= ruleQuery
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(3)).eContents().get(1)).eContents().get(3)),line(),start());
            }
            pushFollow(FOLLOW_ruleQuery_in_ruleAction204);
            temp_query=ruleQuery();
            _fsp--;
            if (failed) return result;
            if ( backtracking==0 ) {
              factory.set(result,"query",convert(temp_query),false); ptm.ruleFinished(temp_query,end()); 
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:169:1: ( ';' )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:169:2: ';'
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(3)).eContents().get(1)).eContents().get(4)),line(),start());
            }
            match(input,11,FOLLOW_11_in_ruleAction213); if (failed) return result;
            if ( backtracking==0 ) {
              ptm.ruleFinished(getLastToken(),end());
            }

            }


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 4, ruleAction_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleAction


    // $ANTLR start ruleQuery
    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:173:1: ruleQuery returns [EObject result] : ( (temp_st= ruleState ) (temp_condition= ruleCondition )? ) ;
    public EObject ruleQuery() throws RecognitionException {
        EObject result = null;
        int ruleQuery_StartIndex = input.index();
        EObject temp_st = null;

        EObject temp_condition = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 5) ) { return result; }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:174:4: ( ( (temp_st= ruleState ) (temp_condition= ruleCondition )? ) )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:174:4: ( (temp_st= ruleState ) (temp_condition= ruleCondition )? )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "Query");
              				ptm.setModelElement(result);
              			 
            }
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:178:1: ( (temp_st= ruleState ) (temp_condition= ruleCondition )? )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:178:2: (temp_st= ruleState ) (temp_condition= ruleCondition )?
            {
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:178:2: (temp_st= ruleState )
            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:178:3: temp_st= ruleState
            {
            if ( backtracking==0 ) {
              ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(4)).eContents().get(1)).eContents().get(0)),line(),start());
            }
            pushFollow(FOLLOW_ruleState_in_ruleQuery240);
            temp_st=ruleState();
            _fsp--;
            if (failed) return result;
            if ( backtracking==0 ) {
              factory.set(result,"st",convert(temp_st),false); ptm.ruleFinished(temp_st,end()); 
            }

            }

            // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:181:1: (temp_condition= ruleCondition )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==14) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:181:2: temp_condition= ruleCondition
                    {
                    if ( backtracking==0 ) {
                      ptm.invokeRule(((EObject)((EObject)((EObject)xtextfile.eContents().get(4)).eContents().get(1)).eContents().get(1)),line(),start());
                    }
                    pushFollow(FOLLOW_ruleCondition_in_ruleQuery251);
                    temp_condition=ruleCondition();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      factory.set(result,"condition",convert(temp_condition),false); ptm.ruleFinished(temp_condition,end()); 
                    }

                    }
                    break;

            }


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 5, ruleQuery_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleQuery


    // $ANTLR start ruleCondition
    // ..//edu.teco.squery/src-gen//edu/teco/squery/parser/sQuery.g:186:1: ruleCondition returns [EObject result] : ( ( 'where' ) (temp_expressions= ruleBoolExpression ) ( ( ( '||' ) | ( '&&' ) ) (temp_expressions= ruleBoolExpression ) )* ) ;
    public EObject ruleCondition() throws RecognitionException {
        EObject result = null;
        int ruleCondition_StartIndex = input.index();
        EObject temp_expressions = null;

